# stack-compass-ai

./: .dockerignore  .env  .env.docker  .env.example  .replit  .vercelignore  APPWRITE_INTEGRATION_STATUS.md  APPWRITE_SETUP.md  CONVERSION_SUMMARY.md  DEPLOYMENT_GUIDE.md  DOCKER_SUMMARY.md  Dockerfile.client  Dockerfile.python  Dockerfile.server  GET_APPWRITE_API_KEY.md  README.md  bun.lockb  deploy.sh  dev-server.mjs  docker-compose.dev.yml  docker-compose.yml  docker-run.bat  docker-run.sh  docker-test.sh  frontend-server.js  index.html  next.config.js  nextjs-server.cjs  nginx-proxy.conf  nginx.conf  package-lock.json  package.json  pyproject.toml  run-frontend.mjs  run-server.mjs  server.js  server.mjs  start-all-services.js  start-app.sh  start-frontend.sh  (+9 more)
.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  images-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  react-loadable-manifest.json  required-server-files.json  routes-manifest.json  trace
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
client/: package.json
components/: ClientApp.tsx  ComparisonCards.tsx  Footer.tsx  Header.tsx  HeroSection.tsx  TechnologyShowcase.tsx  query-provider.tsx
lib/: use-mobile.ts
python-api/: .env.example  README.md  __init__.py  ai_module.py  main.py  requirements.txt  run.py  simple_main.py  start_ai_service.py
server/: ai-integration.ts  create-collections.ts  db.ts  fix-permissions.ts  hono-server.mjs  index.js  index.ts  package-lock.json  package.json  (+5 more)
(+326 files in other folders)
